# dart_exercise

./: pubspec.yaml
lib/: generated_bindings.dart
lib/c_struct/: CMakeCache.txt  CMakeLists.txt  Makefile  c_struct.def  cmake_install.cmake  libc_struct.$(PROJECT_VERSION).dylib  libc_struct.1.dylib  libc_struct.dylib  libtwist.1.0.0.dylib  libtwist.1.dylib  libtwist.dylib  libtwist.so.1.0.0  main.c  twist.c  twist.h  twist_test
